<resources>
    <string name="app_name">EcoChoice</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="new_user">New user? Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered? Login</string>
    <string name="product_image">Product Image</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="environmental_effect">Environmental Effect</string>
    <string name="eco_friendly_tips">Eco-Friendly Tipa</string>
    <string name="alternative_products">Alternative Products</string>
    <string name="geemy_name">Gemei Aparat De Tuns Geemy Model GM 595</string>
    <string name="geemy_tips">Avoid products with excessive plastic or non-recyclable materials. Consider charging your electric trimmer/shaver using renewable energy sources such as solar power or wind power.</string>
    <string name="geemy_impacts">Energy Consumption, Made of non-recyclable materials, Made of non-recyclable materials.</string>
    <string name="eco_slogan">"Embrace Sustainability: For a Greener Future!"</string>
    <string name="list_is_empty">List is empty!</string>
    <string name="product_description_not_found">Product description not found</string>
    <string name="alternative_products_not_found">Alternative products not found</string>
</resources>